# Portfolio

./: .cache_ggshield  .gitignore  README.md
apolline/: .env  README.md  pubspec.yaml
apolline/android/app/: build.gradle.kts
apolline/ios/Runner/: Info.plist
apolline/ios/Runner.xcodeproj/: project.pbxproj
apolline/lib/: main.dart
apolline/lib/managers/: bluetooth_manager.dart  data_manager.dart
apolline/linux/: CMakeLists.txt
apolline/test/: widget_test.dart
apolline/web/: index.html  manifest.json
apolline/windows/: CMakeLists.txt
flood-it/: Doxyfile  readMe.md
flood-it/Flood-it/Flood_it/src/: CMakeLists.txt  main.cpp
flood-it/Flood-it/Flood_it/src/Controller/: GameController.cpp  GameController.h
flood-it/Flood-it/Flood_it/src/Model/: Cell.cpp  Cell.h  Color.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  Observable.cpp  Observable.h  Observer.h  RecordManager.cpp  RecordManager.h
flood-it/Flood-it/Flood_it/src/View/: GameBoardWidget.cpp  GameBoardWidget.h  mainwindow.cpp  mainwindow.h
matrix_confusion/matrix_confusion/: KMeans_Matrice_Confusion.py  KNN.py  KNN_Matrice_confusion.py  projet_matrice_confusion.py
othello/: ReadME.md
othello/Othello/: pom.xml
restaurant_application/: .gitignore  Doxyfile  Makefile  README.md  requirements.txt
robotic_arm/Examan_2025_59333/: Examan_2025_59333.cuo
robotic_head/: camera_and_voice.py  client.py  server.py
secure_file_sharing/: Makefile  README.md  gitignore  requirements.txt
secure_file_sharing/Project/: .env  db.sqlite3  file_key.key  file_name_key.key  secret.json
(+167 files in other folders)
